--- a/catatan_git.ipynb
+++ b/catatan_git.ipynb
@@ -5,7 +5,7 @@
    "id": "5f180b19",
    "metadata": {},
    "source": [
-    "# How to Clone and Accessing Repository"
+    "## How to Clone and Accessing Repository"
    ]
   },
   {
